src/main/java/org/example/demo_ssr_v1_1/_core/errors/exception/Exception404.java
package org.example.demo_ssr_v1_1._core.errors.exception;

public class Exception404 extends RuntimeException {
    public Exception404(String message) {
        super(message);
    }
}
